--- a/LaboratorioMVC/Views/Home/Index.cshtml
+++ b/LaboratorioMVC/Views/Home/Index.cshtml
@@ -1,8 +1,23 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container my-5">
+    <h1 class="text-center mb-4">BOOKSHELF</h1>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+        @foreach (var book in ViewBag.Books)
+        {
+            <div class="col">
+                <div class="card h-100">
+                    @* <img src="@book.ImageUrl" class="card-img-top" alt="Book Cover"> *@
+                    <div class="card-body">
+                        <h5 class="card-title">@book.Title</h5>
+                        <p class="card-text">@book.Description</p>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
 </div>
+
