FEATURE: Controller Organization

--- a/LaboratorioMVC/Views/Shared/_Layout.cshtml
+++ b/LaboratorioMVC/Views/Shared/_Layout.cshtml
@@ -23,13 +23,13 @@
                         <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Author">Author</a>
+                        <a class="nav-link" asp-area="" asp-controller="Author" asp-action="Index">Author</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Book">Book</a>
+                        <a class="nav-link" asp-area="" asp-controller="Book" asp-action="Index">Book</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Loan">Loan</a>
+                        <a class="nav-link" asp-area="" asp-controller="Loan" asp-action="Index">Loan</a>
                     </li>
                 </ul>
             </div>
