--- a/LaboratorioMVC/Views/Book/Index.cshtml
+++ b/LaboratorioMVC/Views/Book/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model BookFilterViewModel
 
+<link rel="stylesheet" href="~/css/Book/bookIndex.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/LaboratorioMVC.styles.css" asp-append-version="true" />
+
 @{
     ViewData["Title"] = "Book Page";
 }
@@ -19,11 +22,26 @@
             <div class="col">
                 <div class="card h-100">
                     <div class="card-img-container">
+                        @{
+                            var currentLoaned = book.Loans?.FirstOrDefault(r => r.Returned == false);
+                        }
+                        @if (currentLoaned != null)
+                        {
+                            <div class="status-badge on-loan">On Loan</div>
+                        }
+                        else
+                        {
+                            <div class="status-badge available">Available</div>
+                        }
                         <img src="https://placehold.co/600x800/023047/FFB703?text=@book.Title" class="card-img-top" alt="Cover for @book.Title">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">@book.Title</h5>
                         <p class="card-text">@book.Description</p>
+                        @if (currentLoaned != null)
+                        {
+                            <p class="card-text text-white-50"><small>Due: @currentLoaned.DevolutionDate.ToString("dd/MM/yyyy")</small></p>
+                        }
                     </div>
                     <div class="card-footer">
                         <a href="#" class="btn btn-details">View Details</a>
