--- a/LaboratorioMVC/Views/Book/Index.cshtml
+++ b/LaboratorioMVC/Views/Book/Index.cshtml
@@ -33,8 +33,11 @@
                         {
                             <div class="status-badge available">Available</div>
                         }
-                        <img src="https://cdn-prod.scalefast.com/public/assets/img/resized/wizardsofthecoast-secret-lair/de04d76c2ac1761cb2865b6afe38949f_KR_636_Q90.webp" class="card-img-top"
-                             alt="Cover for @book.Title">
+
+                        <img
+                            src="https://cdn-prod.scalefast.com/public/assets/img/resized/wizardsofthecoast-secret-lair/de04d76c2ac1761cb2865b6afe38949f_KR_636_Q90.webp"
+                            class="card-img-top"
+                            alt="Cover for @book.Title">
                     </div>
                     <div class="custom-body">
                         <h5 class="card-title fw-bold">@book.Title</h5>
@@ -49,6 +52,8 @@
 
                         <p class="card-text mt-2">@book.Description</p>
 
+                    </div>
+                    <div class="custom-card-footer">
                         @if (currentLoaned != null)
                         {
                             <p class="card-text mt-3">
@@ -57,8 +62,6 @@
                                 </span>
                             </p>
                         }
-                    </div>
-                    <div class="custom-card-footer">
                         <a href="#" class="btn btn-details">View Details</a>
                     </div>
                 </div>
