--- a/LaboratorioMVC/wwwroot/css/Book/bookIndex.css
+++ b/LaboratorioMVC/wwwroot/css/Book/bookIndex.css
@@ -35,27 +35,30 @@
  */
 
 .card {
-    height: 100%;
+    height: 32rem;
     width: 100%;
     margin: 0 1em;
-    justify-content: end;
+    justify-content: start;
 }
 
 
 .custom-body {
-    padding: 12px;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: start;
+    padding: 1em;
 }
 
 .custom-card-footer {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 5rem;
-    
+    flex-direction: column;
+    width: 100%;
+    margin-top: auto;
+    justify-items: start;
+    padding: 0 1em;
+    margin-bottom: 1em;
+}
+
+.custom-card-footer a {
+    width: fit-content;
+    align-self: center;
 }
 
 .due-date-badge {
@@ -74,13 +77,10 @@
     background-color: #e0a800;
 }
 
-.card-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.card-img-container img {
+    height: 15em;
 }
 
-.card-container img {
-    width: 16rem;
-    aspect-ratio: 16/9;
+body {
+    background-image: url("https://i.scdn.co/image/ab67616100005174877d4c061d08c040974224be");
 }
