--- a/LaboratorioMVC/Views/Book/Index.cshtml
+++ b/LaboratorioMVC/Views/Book/Index.cshtml
@@ -7,7 +7,7 @@
     ViewData["Title"] = "Book Page";
 }
 
-<div class="container my-5">
+<div class="container book-page-container my-5">
     <div class="title-container">
         <h1 class="bookshelf-title">Bookshelf</h1>
     </div>
@@ -65,7 +65,21 @@
                         <a href="#" class="btn btn-details">View Details</a>
                     </div>
                 </div>
+
             </div>
         }
+
+        <div type="button" class="card-container new-card-container">
+            <div class="card new-card">
+                <div class="custom-body new-custom-body">
+                    
+                    <p>Add new book</p>
+                    <i class="fa-solid fa-plus "></i>
+
+                </div>
+            </div>
+        </div>
+
     </div>
+
 </div>
