--- a/LaboratorioMVC/wwwroot/css/Book/bookIndex.css
+++ b/LaboratorioMVC/wwwroot/css/Book/bookIndex.css
@@ -82,5 +82,32 @@
 }
 
 body {
-    background-image: url("https://i.scdn.co/image/ab67616100005174877d4c061d08c040974224be");
+    /*background-image: url("https://i.scdn.co/image/ab67616100005174877d4c061d08c040974224be");*/
+}
+
+.book-page-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.new-card {
+    display: flex;
+    border-radius: 1em;
+    justify-content: center;
+    align-items: center;
+    background-color: #02304790 ;
+    transition: color 0.3s ease;    
+}
+
+.new-card:hover{
+    color: var(--ut-orange);    
+}
+
+.new-custom-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;    
 }
